Fixed bug #42009 (is_a() and is_subclass_of() should NOT call autoload, in the same way as "instanceof" operator).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@241716 c90b9560-bf6c-de11-be94-00142212c4b1